--- a/views/crear.hbs
+++ b/views/crear.hbs
@@ -1,8 +1,10 @@
 {{#> plantilla}}
     <section>
-        <div>
-            <label>Nombre</label>
+        <h1>Crear Item</h1>
+        <form>
             <input type="text" placeholder="Nombre">
-        </div>
+            <input type="text" placeholder="Precio">
+            <input class="btn" type="button" value="Crear">
+        </form>
     </section>
 {{/plantilla}}
