--- a/views/eliminar.hbs
+++ b/views/eliminar.hbs
@@ -1,7 +1,10 @@
 {{#> plantilla}}
     <section>
-        <ul>
-            <li></li>
-        </ul>
+        <h1>Eliminar Item</h1>
+        <div>
+            <label>Nombre</label>
+            <input type="text" placeholder="Nombre">
+            <input class="btn" type="button" value="Eliminar">
+        </div>
     </section>
 {{/plantilla}}
