--- a/views/crear.hbs
+++ b/views/crear.hbs
@@ -3,8 +3,8 @@
         <h1>Crear Item</h1>
         <form>
             <input type="text" placeholder="Nombre">
-            <input type="text" placeholder="Precio">
-            <input class="btn" type="button" value="Crear">
+            <input type="number" placeholder="Precio">
+            <a class="btn" href="">Crear</a>
         </form>
     </section>
 {{/plantilla}}
