--- a/views/eliminar.hbs
+++ b/views/eliminar.hbs
@@ -2,8 +2,7 @@
     <section>
         <h1>Eliminar Item</h1>
         <div>
-            <label>Nombre</label>
-            <input type="text" placeholder="Nombre">
+            <label>(Nombre: {{nombre}} - Precio: {{precio}})</label>
             <input class="btn" type="button" value="Eliminar">
         </div>
     </section>
