--- a/views/index.hbs
+++ b/views/index.hbs
@@ -5,7 +5,7 @@
             {{#each almuerzos}}
                 <li>
                     <span>
-                        <a class="btn" href="/eliminar/{{@key}}">&#x2715;</a> 
+                        <a id={{@key}} class="btn" href="/eliminar/{{@key}}">&#x2715;</a> 
                         {{nombre}}
                     </span>
                     <span>{{precio}}</span>
